--- a/templates/Pages/home.html.twig
+++ b/templates/Pages/home.html.twig
@@ -14,8 +14,15 @@
 
     <section class="py-5">
         <div class="container">
-            <h2 class="font-weight-light">Page Content</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus ab nulla dolorum autem nisi officiis blanditiis voluptatem hic, assumenda aspernatur facere ipsam nemo ratione cumque magnam enim fugiat reprehenderit expedita.</p>
+            <div class="row">
+                <div class="col-md-3 text-center">
+                    <img class="circle-image" src="https://mjsolpac.com/wp-content/uploads/2017/03/person-placeholder.jpg">
+                </div>
+                <div class="col mb-9">
+                    <h2 class="font-weight-light pb-3">About Me</h2>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in</p>
+                </div>
+            </div>
         </div>
     </section>
 {% endblock %}
