adds social icons

--- a/templates/Pages/home.html.twig
+++ b/templates/Pages/home.html.twig
@@ -7,6 +7,10 @@
                 <div class="col-12 text-center">
                     <h1 class="font-weight-heavy main-text">Brad Waterhouse</h1>
                     <p class="lead main-text">Software Developer</p>
+                            <img height="38px" width="38px" class="m-2 social-icon" src="https://i.imgur.com/FvuVwVH.png">
+                            <img height="37px" width="37px" class="m-2 social-icon" src="https://i.imgur.com/eMi7tq1.png">
+                            <img height="37px" width="37px" class="m-2 social-icon" src="https://i.imgur.com/A3e8l5X.png">
+
                 </div>
             </div>
         </div>
