--- a/templates/footer.html.twig
+++ b/templates/footer.html.twig
@@ -1,3 +1,5 @@
 <footer class="pt-5 pb-5 footer" id="footer">
     <div class="container">
+        <p class="m-0 text-center small footer-text">Copyright &copy; Brad Waterhouse 2020</p>
+    </div>
 </footer>
