--- a/templates/Pages/blog.html.twig
+++ b/templates/Pages/blog.html.twig
@@ -14,7 +14,7 @@
     <section class="py-5">
         <div class="container">
             <div class="col-md-12">
-                <h2 class="blog-title">Alice in Wonderland, part dos</h2>
+                <h2 class="blog-title">Today I Learned...</h2>
                 <p>'You ought to be ashamed of yourself for asking such a simple question,' added the Gryphon; and then they both sat silent and looked at poor Alice, who felt ready to sink into the earth. At last the Gryphon said to the Mock Turtle, 'Drive on, old fellow! Don't be all day about it!' and he went on in these words:
                     'Yes, we went to school in the sea, though you mayn't believe it—'
                     'I never said I didn't!' interrupted Alice.
@@ -35,7 +35,7 @@
                     </div>
                 </div>
                 <hr>
-                <h2 class="blog-title">Revolution has begun!</h2>
+                <h2 class="blog-title">Today I Learned...</h2>
                 <p>'I am bound to Tahiti for more men.'
                     'Very good. Let me board you a moment—I come in peace.' With that he leaped from the canoe, swam to the boat; and climbing the gunwale, stood face to face with the captain.
                     'Cross your arms, sir; throw back your head. Now, repeat after me. As soon as Steelkilt leaves me, I swear to beach this boat on yonder island, and remain there six days. If I do not, may lightning strike me!'A pretty scholar,' laughed the Lakeman. 'Adios, Senor!' and leaping into the sea, he swam back to his comrades. <a href="#">Read more...</a></p>
@@ -56,7 +56,7 @@
                 </div>
                 <hr>
                 <hr>
-                <h2 class="blog-title">Revolution has begun!</h2>
+                <h2 class="blog-title">Today I Learned...</h2>
                 <p>'I am bound to Tahiti for more men.'
                     'Very good. Let me board you a moment—I come in peace.' With that he leaped from the canoe, swam to the boat; and climbing the gunwale, stood face to face with the captain.
                     'Cross your arms, sir; throw back your head. Now, repeat after me. As soon as Steelkilt leaves me, I swear to beach this boat on yonder island, and remain there six days. If I do not, may lightning strike me!'A pretty scholar,' laughed the Lakeman. 'Adios, Senor!' and leaping into the sea, he swam back to his comrades. <a href="#">Read more...</a></p>
