--- a/templates/Pages/blog.html.twig
+++ b/templates/Pages/blog.html.twig
@@ -13,11 +13,23 @@
 
     <section class="py-5">
         <div class="container">
+
+
+                    <div class="dropdown show mb-2 text-right">
+                        <a class="btn btn portfolio_button dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            Order By
+                        </a>
+
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                            <a class="dropdown-item" href="#">Price (ASC)</a>
+                            <a class="dropdown-item" href="#">Price (DESC)</a>
+                        </div>
+                    </div>
+
+
             <div class="col-md-12">
                 <h2 class="blog-title">Today I Learned...</h2>
-                <p>'You ought to be ashamed of yourself for asking such a simple question,' added the Gryphon; and then they both sat silent and looked at poor Alice, who felt ready to sink into the earth. At last the Gryphon said to the Mock Turtle, 'Drive on, old fellow! Don't be all day about it!' and he went on in these words:
-                    'Yes, we went to school in the sea, though you mayn't believe it—'
-                    'I never said I didn't!' interrupted Alice.
+                <p>'You ought to be ashamed of yourself for asking such a simple question,' added the Gryphon; and then they both sat silent and looked at poor Alice, who felt ready to sink into the earth. At last the Gryphon said to the Mock Turtle, 'Drive o
                     'You did,' said the Mock Turtle. <a href="#">Read more...</a></p>
                 <div>
                     <span class="badge date-label">2 weeks ago</span>
@@ -38,7 +50,7 @@
                 <h2 class="blog-title">Today I Learned...</h2>
                 <p>'I am bound to Tahiti for more men.'
                     'Very good. Let me board you a moment—I come in peace.' With that he leaped from the canoe, swam to the boat; and climbing the gunwale, stood face to face with the captain.
-                    'Cross your arms, sir; throw back your head. Now, repeat after me. As soon as Steelkilt leaves me, I swear to beach this boat on yonder island, and remain there six days. If I do not, may lightning strike me!'A pretty scholar,' laughed the Lakeman. 'Adios, Senor!' and leaping into the sea, he swam back to his comrades. <a href="#">Read more...</a></p>
+                    'Cross your arms, sir; throw back your head. Now, repeat after me. As soon as Steelkilt leaves me, I swear to <a href="#">Read more...</a></p>
                 <div>
                     <span class="badge date-label">1 months ago</span>
                     <div class="pull-right">
@@ -59,7 +71,7 @@
                 <h2 class="blog-title">Today I Learned...</h2>
                 <p>'I am bound to Tahiti for more men.'
                     'Very good. Let me board you a moment—I come in peace.' With that he leaped from the canoe, swam to the boat; and climbing the gunwale, stood face to face with the captain.
-                    'Cross your arms, sir; throw back your head. Now, repeat after me. As soon as Steelkilt leaves me, I swear to beach this boat on yonder island, and remain there six days. If I do not, may lightning strike me!'A pretty scholar,' laughed the Lakeman. 'Adios, Senor!' and leaping into the sea, he swam back to his comrades. <a href="#">Read more...</a></p>
+                    'Cross your arms, sir; throw back your head. Now, repeat after me. As soon as Steelkilt leaves me, I swear to <a href="#">Read more...</a></p>
                 <div>
                     <span class="badge date-label">2 months ago</span>
                     <div class="pull-right">
@@ -80,7 +92,7 @@
                 <h2 class="blog-title">Revolution has begun!</h2>
                 <p>'I am bound to Tahiti for more men.'
                     'Very good. Let me board you a moment—I come in peace.' With that he leaped from the canoe, swam to the boat; and climbing the gunwale, stood face to face with the captain.
-                    'Cross your arms, sir; throw back your head. Now, repeat after me. As soon as Steelkilt leaves me, I swear to beach this boat on yonder island, and remain there six days. If I do not, may lightning strike me!'A pretty scholar,' laughed the Lakeman. 'Adios, Senor!' and leaping into the sea, he swam back to his comrades. <a href="#">Read more...</a></p>
+                    'Cross your arms, sir; throw back your head. Now, repeat after me. As soon as Steelkilt leaves me, I swear to <a href="#">Read more...</a></p>
                 <div>
                     <span class="badge date-label">2 months ago</span>
                     <div class="pull-right">
