--- a/templates/Pages/portfolio.html.twig
+++ b/templates/Pages/portfolio.html.twig
@@ -18,7 +18,7 @@
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in</p>
             </div>
             <div class="row mb-5">
-                <div class="col-xs-12 col-sm-6 col-md-4">
+                <div class="col-xs-12 col-sm-6 col-md-4 mb-3">
                     <div class="card rounded-corners-bottom rounded-corners-top">
                         <img class="card-img-top rounded-corners-top" src="https://thumbs.dreamstime.com/b/professional-development-programmer-working-programming-website-software-coding-technology-writing-codes-data-code-132331729.jpg" alt="Card image cap">
                         <div class="card-body">
@@ -34,7 +34,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-6 col-md-4">
+                <div class="col-xs-12 col-sm-6 col-md-4 mb-3">
                     <div class="card rounded-corners-bottom rounded-corners-top">
                         <img class="card-img-top rounded-corners-top" src="https://thumbs.dreamstime.com/b/professional-development-programmer-working-programming-website-software-coding-technology-writing-codes-data-code-132331729.jpg" alt="Card image cap">
                         <div class="card-body">
@@ -48,7 +48,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-6 col-md-4">
+                <div class="col-xs-12 col-sm-6 col-md-4 mb-3">
                     <div class="card rounded-corners-bottom rounded-corners-top">
                         <img class="card-img-top rounded-corners-top" src="https://thumbs.dreamstime.com/b/professional-development-programmer-working-programming-website-software-coding-technology-writing-codes-data-code-132331729.jpg" alt="Card image cap">
                         <div class="card-body">
@@ -64,7 +64,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-xs-12 col-sm-6 col-md-4">
+                <div class="col-xs-12 col-sm-6 col-md-4 mb-3">
                     <div class="card rounded-corners-bottom rounded-corners-top">
                         <img class="card-img-top rounded-corners-top" src="https://thumbs.dreamstime.com/b/professional-development-programmer-working-programming-website-software-coding-technology-writing-codes-data-code-132331729.jpg" alt="Card image cap">
                         <div class="card-body">
@@ -77,7 +77,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-6 col-md-4">
+                <div class="col-xs-12 col-sm-6 col-md-4 mb-3">
                     <div class="card rounded-corners-bottom rounded-corners-top">
                         <img class="card-img-top rounded-corners-top" src="https://thumbs.dreamstime.com/b/professional-development-programmer-working-programming-website-software-coding-technology-writing-codes-data-code-132331729.jpg" alt="Card image cap">
                         <div class="card-body">
@@ -91,7 +91,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-xs-12 col-sm-6 col-md-4">
+                <div class="col-xs-12 col-sm-6 col-md-4 mb-3">
                     <div class="card rounded-corners-bottom rounded-corners-top">
                         <img class="card-img-top rounded-corners-top" src="https://thumbs.dreamstime.com/b/professional-development-programmer-working-programming-website-software-coding-technology-writing-codes-data-code-132331729.jpg" alt="Card image cap">
                         <div class="card-body">
