--- a/templates/Pages/contact.html.twig
+++ b/templates/Pages/contact.html.twig
@@ -5,7 +5,7 @@
         <div class="container h-100">
             <div class="row h-100 align-items-center">
                 <div class="col-12 text-center">
-                    <h3 class="font-weight-heavy main-text">Contact.</h3>
+                    <h1 class="font-weight-heavy main-text">Contact.</h1>
                 </div>
             </div>
         </div>
@@ -15,17 +15,17 @@
         <div class="container mb-5" id="container">
             <div class="row">
                 <div class="col">
-                    <h1 class="font-weight-light pb-1 blog-title">Get In Touch</h1>
+                    <h1 class="font-weight-light pb-1 header-text">Get In Touch</h1>
                     <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in</p>
                 </div>
             </div>
+            <hr class="my-5">
             <form>
                 <div class="row">
                     <div class="col-md-6">
                         <div class="md-form mb-2">
                             <label class="p-text" for="exampleFormControlTextarea1">Full Name</label>
                             <input type="text" id="name" name="name" placeholder="Name" class="form-control form-background">
-                            <small class="form-text text-muted">Your name</small>
                         </div>
                     </div>
                     <div class="col-md-6">
