--- a/templates/Pages/home.html.twig
+++ b/templates/Pages/home.html.twig
@@ -6,27 +6,313 @@
             <div class="row h-100 align-items-center">
                 <div class="col-12 text-center">
                     <h1 class="font-weight-heavy main-text">Brad Waterhouse.</h1>
-                    <p class="lead main-text">Software Developer</p>
-                            <img height="38px" width="38px" class="m-2 social-icon" src="https://i.imgur.com/FvuVwVH.png">
-                            <img height="37px" width="37px" class="m-2 social-icon" src="https://i.imgur.com/eMi7tq1.png">
-                            <img height="37px" width="37px" class="m-2 social-icon" src="https://i.imgur.com/A3e8l5X.png">
+                    <p class="lead main-text">Software Developer.</p>
+                    <img height="38px" width="38px" class="m-2 social-icon" src="https://i.imgur.com/FvuVwVH.png">
+                    <img height="37px" width="37px" class="m-2 social-icon" src="https://i.imgur.com/eMi7tq1.png">
+                    <img height="37px" width="37px" class="m-2 social-icon" src="https://i.imgur.com/A3e8l5X.png">
 
                 </div>
             </div>
         </div>
     </header>
 
-    <section class="py-5">
+    <main>
         <div class="container">
-            <div class="row">
-                <div class="col-md-3 text-center">
-                    <img class="circle-image" src="https://mjsolpac.com/wp-content/uploads/2017/03/person-placeholder.jpg">
+
+            <!--Section: Main info-->
+            <section class="mt-5 wow fadeIn">
+                <!--Grid row-->
+                <div class="row">
+                    <!--Grid column-->
+                    <div class="col-md-6 mb-4">
+                        <img src="https://mjsolpac.com/wp-content/uploads/2017/03/person-placeholder.jpg"
+                             class="img-fluid" alt="">
+                    </div>
+                    <!--Grid column-->
+
+                    <!--Grid column-->
+                    <div class="col-md-6 mb-4">
+                        <!-- Main heading -->
+                        <h3 class="header-text h3 mb-3">Hey, I'm Brad.</h3>
+                        <p>We care about the development of our users. We have prepared numerous tutorials, which allow
+                            you to learn how to use MDB as well as other technologies. We care about the development of
+                            our users. We have prepared numerous tutorials, which allow you to learn how to use MDB as
+                            well as other technologies.</p>
+                        <p>We care about the development of our users. We have prepared numerous tutorials, which allow
+                            you to learn how to use MDB as well as other technologies. </p>
+                        <p>Read details below to learn more about MDB.</p>
+                        <!-- Main heading -->
+                        <hr>
+                        <!-- CTA -->
+                        <a target="_blank" href="https://mdbootstrap.com/getting-started/" class="btn btn-grey btn-md">Download
+                            my CV
+                            <i class="fa fa-download ml-1"></i>
+                        </a>
+
+                    </div>
+                    <!--Grid column-->
+
                 </div>
-                <div class="col mb-9">
-                    <h2 class="font-weight-light pb-3">About Me</h2>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in</p>
+                <!--Grid row-->
+
+            </section>
+            <!--Section: Main info-->
+
+            <hr class="my-5">
+
+            <section>
+
+                <h2 class="header-text my-5 h3 text-center">My Skills.</h2>
+
+                <!--First row-->
+                <div class="row features-small mt-5 wow fadeIn">
+
+                    <!--Grid column-->
+                    <div class="col-xl-3 col-lg-6">
+                        <!--Grid row-->
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="fa fa-code fa-2x mb-1 indigo-text" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10 mb-2 pl-3">
+                                <h5 class="feature-title font-bold mb-1">PHP</h5>
+                                <p class="grey-text mt-2">Chrome, Firefox, IE, Safari, Opera, Microsoft Edge - MDB loves
+                                    all browsers; all browsers love MDB.
+                                </p>
+                            </div>
+                        </div>
+                        <!--/Grid row-->
+                    </div>
+                    <!--/Grid column-->
+
+                    <!--Grid column-->
+                    <div class="col-xl-3 col-lg-6">
+                        <!--Grid row-->
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="fa fa-code fa-2x mb-1 indigo-text" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10 mb-2">
+                                <h5 class="feature-title font-bold mb-1">React / React Native</h5>
+                                <p class="grey-text mt-2">MDB becomes better every month. We love the project and
+                                    enhance as much as possible.
+                                </p>
+                            </div>
+                        </div>
+                        <!--/Grid row-->
+                    </div>
+                    <!--/Grid column-->
+
+                    <!--Grid column-->
+                    <div class="col-xl-3 col-lg-6">
+                        <!--Grid row-->
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="fa fa-code fa-2x mb-1 indigo-text" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10 mb-2">
+                                <h5 class="feature-title font-bold mb-1">Typescript</h5>
+                                <p class="grey-text mt-2">Our society grows day by day. Visit our forum and check how it
+                                    is to be a part of our family.
+                                </p>
+                            </div>
+                        </div>
+                        <!--/Grid row-->
+                    </div>
+                    <!--/Grid column-->
+
+                    <!--Grid column-->
+                    <div class="col-xl-3 col-lg-6">
+                        <!--Grid row-->
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="fa fa-code fa-2x mb-1 indigo-text" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10 mb-2">
+                                <h5 class="feature-title font-bold mb-1">MySQL & SQLite</h5>
+                                <p class="grey-text mt-2">MDB is integrated with newest jQuery. Therefore you can use
+                                    all the latest features which come along with
+                                    it.
+                                </p>
+                            </div>
+                        </div>
+                        <!--/Grid row-->
+                    </div>
+                    <!--/Grid column-->
+
                 </div>
-            </div>
+                <!--/First row-->
+
+                <!--Second row-->
+                <div class="row features-small mt-4 wow fadeIn">
+
+                    <!--Grid column-->
+                    <div class="col-xl-3 col-lg-6">
+                        <!--Grid row-->
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="fa fa-code fa-2x mb-1 indigo-text" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10 mb-2">
+                                <h5 class="feature-title font-bold mb-1">CSS / SASS</h5>
+                                <p class="grey-text mt-2">Material Design for Bootstrap comes with both, compiled, ready
+                                    to use libraries including all features as
+                                    well as modules for CSS (SASS files) and JS.</p>
+                            </div>
+                        </div>
+                        <!--/Grid row-->
+                    </div>
+                    <!--/Grid column-->
+
+                    <!--Grid column-->
+                    <div class="col-xl-3 col-lg-6">
+                        <!--Grid row-->
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="fa fa-code fa-2x mb-1 indigo-text" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10 mb-2">
+                                <h5 class="feature-title font-bold mb-1">Unit Testing</h5>
+                                <p class="grey-text mt-2">We care about reliability. If you have any questions - do not
+                                    hesitate to contact us.
+                                </p>
+                            </div>
+                        </div>
+                        <!--/Grid row-->
+                    </div>
+                    <!--/Grid column-->
+
+                    <!--Grid column-->
+                    <div class="col-xl-3 col-lg-6">
+                        <!--Grid row-->
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="fa fa-code fa-2x mb-1 indigo-text" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10 mb-2">
+                                <h5 class="feature-title font-bold mb-1">Git</h5>
+                                <p class="grey-text mt-2">MDB fully supports Flex Box. You can forget about alignment
+                                    issues.</p>
+                            </div>
+                        </div>
+                        <!--/Grid row-->
+                    </div>
+                    <!--/Grid column-->
+
+                    <!--Grid column-->
+                    <div class="col-xl-3 col-lg-6">
+                        <!--Grid row-->
+                        <div class="row">
+                            <div class="col-2">
+                                <i class="fa fa-code fa-2x mb-1 indigo-text" aria-hidden="true"></i>
+                            </div>
+                            <div class="col-10 mb-2">
+                                <h5 class="feature-title font-bold mb-1">Apache / NginX</h5>
+                                <p class="grey-text mt-2">Arranged and well documented .scss files can't wait until you
+                                    compile them.</p>
+                            </div>
+                        </div>
+                        <!--/Grid row-->
+                    </div>
+                    <!--/Grid column-->
+
+                </div>
+                <!--/Second row-->
+
+            </section>
+
+            <!--Section: Main features & Quick Start-->
+            <section>
+
+                <h3 class="header-text h3 text-center mb-5">Testimonials.</h3>
+
+                <!--Grid row-->
+                <div class="row wow fadeIn">
+
+                    <!--Grid column-->
+                    <div class="col-lg-6 col-md-12 px-4">
+
+                        <!--First row-->
+                        <div class="row">
+                            <div class="col-1 mr-3">
+                                <i class="fa fa-comments-o fa-2x cyan-text"></i>
+                            </div>
+                            <div class="col-10">
+                                <h5 class="feature-title">Bootstrap 4</h5>
+                                <i class="grey-text">Thanks to MDB you can take advantage of all feature of newest
+                                    Bootstrap 4.</i>
+                            </div>
+                        </div>
+                        <!--/First row-->
+
+                        <div style="height:30px"></div>
+
+                        <!--Second row-->
+                        <div class="row">
+                            <div class="col-1 mr-3">
+                                <i class="fa fa-comments-o fa-2x cyan-text"></i>
+                            </div>
+                            <div class="col-10">
+                                <h5 class="feature-title">Detailed documentation</h5>
+                                <i class="grey-text">We give you detailed user-friendly documentation at your disposal.
+                                    It will help you to implement your ideas
+                                    easily.
+                                </i>
+                            </div>
+                        </div>
+                        <!--/Second row-->
+
+                        <div style="height:30px"></div>
+
+                    </div>
+                    <!--/Grid column-->
+
+                    <!--Grid column-->
+                    <div class="col-lg-6 col-md-12 px-4">
+
+                        <!--First row-->
+                        <div class="row">
+                            <div class="col-1 mr-3">
+                                <i class="fa fa-comments-o fa-2x cyan-text"></i>
+                            </div>
+                            <div class="col-10">
+                                <h5 class="feature-title">Bootstrap 4</h5>
+                                <i class="grey-text">Thanks to MDB you can take advantage of all feature of newest
+                                    Bootstrap 4.</i>
+                            </div>
+                        </div>
+                        <!--/First row-->
+
+                        <div style="height:30px"></div>
+
+                        <!--Second row-->
+                        <div class="row">
+                            <div class="col-1 mr-3">
+                                <i class="fa fa-comments-o fa-2x cyan-text"></i>
+                            </div>
+                            <div class="col-10">
+                                <h5 class="feature-title">Detailed documentation</h5>
+                                <i class="grey-text">We give you detailed user-friendly documentation at your disposal.
+                                    It will help you to implement your ideas
+                                    easily.
+                                </i>
+                            </div>
+                        </div>
+                        <!--/Second row-->
+
+                        <div style="height:30px"></div>
+
+
+                    </div>
+                    <!--/Grid column-->
+
+                </div>
+                <!--/Grid row-->
+
+            </section>
+            <!--Section: Main features & Quick Start-->
+
+            <hr class="my-5">
         </div>
-    </section>
+    </main>
 {% endblock %}
