--- a/templates/Pages/portfolio.html.twig
+++ b/templates/Pages/portfolio.html.twig
@@ -5,7 +5,7 @@
         <div class="container h-100">
             <div class="row h-100 align-items-center">
                 <div class="col-12 text-center">
-                    <h3 class="font-weight-heavy main-text">My Work.</h3>
+                    <h1 class="font-weight-heavy main-text">My Work.</h1>
                 </div>
             </div>
         </div>
@@ -14,9 +14,10 @@
     <section class="py-4">
         <div class="container">
             <div class="col mb-1">
-                <h1 class="font-weight-light pb-1 blog-title">Portfolio</h1>
+                <h1 class="font-weight-light pb-1 header-text">Portfolio</h1>
                 <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in</p>
             </div>
+            <hr class="my-5">
             <div class="row mb-5">
                 <div class="col-xs-12 col-sm-6 col-md-4 mb-3">
                     <div class="card rounded-corners-bottom rounded-corners-top">
