--- a/templates/Pages/blog.html.twig
+++ b/templates/Pages/blog.html.twig
@@ -5,7 +5,8 @@
         <div class="container h-100">
             <div class="row h-100 align-items-center">
                 <div class="col-12 text-center">
-                    <h3 class="font-weight-heavy main-text">Blog.</h3>
+                    <h1 class="font-weight-heavy main-text">Blog.</h1>
+                    <h5 class="main-text">The ramblings of programmer.</h5>
                 </div>
             </div>
         </div>
@@ -13,8 +14,7 @@
 
     <section class="py-5">
         <div class="container">
-
-
+            <hr class="my-5">
                     <div class="dropdown show mb-2 text-right">
                         <a class="btn btn portfolio_button dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                             Order By
