--- a/templates/Pages/contact.html.twig
+++ b/templates/Pages/contact.html.twig
@@ -6,6 +6,7 @@
             <div class="row h-100 align-items-center">
                 <div class="col-12 text-center">
                     <h1 class="font-weight-heavy main-text">Contact.</h1>
+                    <h5 class="main-text">Feel free to get in touch.</h5>
                 </div>
             </div>
         </div>
@@ -13,12 +14,6 @@
 
     <section class="mt-4">
         <div class="container mb-5" id="container">
-            <div class="row">
-                <div class="col">
-                    <h1 class="font-weight-light pb-1 header-text">Get In Touch</h1>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in</p>
-                </div>
-            </div>
             <hr class="my-5">
             <form>
                 <div class="row">
@@ -40,9 +35,9 @@
                 </div>
                 <div class="form-group pb-2">
                     <label class="p-text" for="exampleFormControlTextarea1">Enquiry</label>
-                    <textarea class="form-control form-background" id="exampleFormControlTextarea1" rows="3"></textarea>
+                    <textarea class="form-control form-background" id="exampleFormControlTextarea1" rows="19"></textarea>
                 </div>
-                <a class="btn portfolio_button btn-sm">Submit</a>
+                <a href="#" class="btn site-button">Send</a>
             </form>
         </div>
     </section>
