--- a/templates/Pages/home.html.twig
+++ b/templates/Pages/home.html.twig
@@ -7,10 +7,9 @@
                 <div class="col-12 text-center">
                     <h1 class="font-weight-heavy main-text">Brad Waterhouse.</h1>
                     <p class="lead main-text">Software Developer.</p>
-                    <img height="38px" width="38px" class="m-2 social-icon" src="https://i.imgur.com/FvuVwVH.png">
-                    <img height="37px" width="37px" class="m-2 social-icon" src="https://i.imgur.com/eMi7tq1.png">
-                    <img height="37px" width="37px" class="m-2 social-icon" src="https://i.imgur.com/A3e8l5X.png">
-
+                    <img height="38px" width="38px" class="m-2 social-icon" src="https://i.imgur.com/FvuVwVH.png" alt="twitter icon">
+                    <img height="37px" width="37px" class="m-2 social-icon" src="https://i.imgur.com/eMi7tq1.png" alt="github icon">
+                    <img height="37px" width="37px" class="m-2 social-icon" src="https://i.imgur.com/A3e8l5X.png" alt="instagram icon">
                 </div>
             </div>
         </div>
@@ -18,21 +17,14 @@
 
     <main>
         <div class="container">
-
-            <!--Section: Main info-->
+            <hr class="my-5">
             <section class="mt-5 wow fadeIn">
-                <!--Grid row-->
                 <div class="row">
-                    <!--Grid column-->
                     <div class="col-md-6 mb-4">
-                        <img src="https://mjsolpac.com/wp-content/uploads/2017/03/person-placeholder.jpg"
-                             class="img-fluid" alt="">
+                        <img src="https://i.imgur.com/MxjN1t2.png"
+                             class="circle-image img-fluid" alt="person">
                     </div>
-                    <!--Grid column-->
-
-                    <!--Grid column-->
                     <div class="col-md-6 mb-4">
-                        <!-- Main heading -->
                         <h3 class="header-text h3 mb-3">Hey, I'm Brad.</h3>
                         <p>We care about the development of our users. We have prepared numerous tutorials, which allow
                             you to learn how to use MDB as well as other technologies. We care about the development of
@@ -40,36 +32,24 @@
                             well as other technologies.</p>
                         <p>We care about the development of our users. We have prepared numerous tutorials, which allow
                             you to learn how to use MDB as well as other technologies. </p>
+                        <p>We care about the development of our users. We have prepared numerous tutorials, which allow
+                            you to learn how to use MDB as well as other technologies. </p>
                         <p>Read details below to learn more about MDB.</p>
-                        <!-- Main heading -->
                         <hr>
-                        <!-- CTA -->
                         <a target="_blank" href="https://mdbootstrap.com/getting-started/" class="btn btn-grey btn-md">Download
                             my CV
                             <i class="fa fa-download ml-1"></i>
                         </a>
-
                     </div>
-                    <!--Grid column-->
-
                 </div>
-                <!--Grid row-->
-
             </section>
-            <!--Section: Main info-->
 
             <hr class="my-5">
 
             <section>
-
                 <h2 class="header-text my-5 h3 text-center">My Skills.</h2>
-
-                <!--First row-->
                 <div class="row features-small mt-5 wow fadeIn">
-
-                    <!--Grid column-->
                     <div class="col-xl-3 col-lg-6">
-                        <!--Grid row-->
                         <div class="row">
                             <div class="col-2">
                                 <i class="fa fa-code fa-2x mb-1 indigo-text" aria-hidden="true"></i>
@@ -81,13 +61,8 @@
                                 </p>
                             </div>
                         </div>
-                        <!--/Grid row-->
                     </div>
-                    <!--/Grid column-->
-
-                    <!--Grid column-->
                     <div class="col-xl-3 col-lg-6">
-                        <!--Grid row-->
                         <div class="row">
                             <div class="col-2">
                                 <i class="fa fa-code fa-2x mb-1 indigo-text" aria-hidden="true"></i>
@@ -99,13 +74,8 @@
                                 </p>
                             </div>
                         </div>
-                        <!--/Grid row-->
                     </div>
-                    <!--/Grid column-->
-
-                    <!--Grid column-->
                     <div class="col-xl-3 col-lg-6">
-                        <!--Grid row-->
                         <div class="row">
                             <div class="col-2">
                                 <i class="fa fa-code fa-2x mb-1 indigo-text" aria-hidden="true"></i>
@@ -117,13 +87,8 @@
                                 </p>
                             </div>
                         </div>
-                        <!--/Grid row-->
                     </div>
-                    <!--/Grid column-->
-
-                    <!--Grid column-->
                     <div class="col-xl-3 col-lg-6">
-                        <!--Grid row-->
                         <div class="row">
                             <div class="col-2">
                                 <i class="fa fa-code fa-2x mb-1 indigo-text" aria-hidden="true"></i>
@@ -136,19 +101,10 @@
                                 </p>
                             </div>
                         </div>
-                        <!--/Grid row-->
                     </div>
-                    <!--/Grid column-->
-
                 </div>
-                <!--/First row-->
-
-                <!--Second row-->
                 <div class="row features-small mt-4 wow fadeIn">
-
-                    <!--Grid column-->
                     <div class="col-xl-3 col-lg-6">
-                        <!--Grid row-->
                         <div class="row">
                             <div class="col-2">
                                 <i class="fa fa-code fa-2x mb-1 indigo-text" aria-hidden="true"></i>
@@ -160,13 +116,8 @@
                                     well as modules for CSS (SASS files) and JS.</p>
                             </div>
                         </div>
-                        <!--/Grid row-->
                     </div>
-                    <!--/Grid column-->
-
-                    <!--Grid column-->
                     <div class="col-xl-3 col-lg-6">
-                        <!--Grid row-->
                         <div class="row">
                             <div class="col-2">
                                 <i class="fa fa-code fa-2x mb-1 indigo-text" aria-hidden="true"></i>
@@ -178,13 +129,8 @@
                                 </p>
                             </div>
                         </div>
-                        <!--/Grid row-->
                     </div>
-                    <!--/Grid column-->
-
-                    <!--Grid column-->
                     <div class="col-xl-3 col-lg-6">
-                        <!--Grid row-->
                         <div class="row">
                             <div class="col-2">
                                 <i class="fa fa-code fa-2x mb-1 indigo-text" aria-hidden="true"></i>
@@ -195,13 +141,8 @@
                                     issues.</p>
                             </div>
                         </div>
-                        <!--/Grid row-->
                     </div>
-                    <!--/Grid column-->
-
-                    <!--Grid column-->
                     <div class="col-xl-3 col-lg-6">
-                        <!--Grid row-->
                         <div class="row">
                             <div class="col-2">
                                 <i class="fa fa-code fa-2x mb-1 indigo-text" aria-hidden="true"></i>
@@ -212,105 +153,69 @@
                                     compile them.</p>
                             </div>
                         </div>
-                        <!--/Grid row-->
                     </div>
-                    <!--/Grid column-->
-
                 </div>
-                <!--/Second row-->
 
             </section>
 
-            <!--Section: Main features & Quick Start-->
+            <hr class="my-5">
             <section>
-
                 <h3 class="header-text h3 text-center mb-5">Testimonials.</h3>
-
-                <!--Grid row-->
                 <div class="row wow fadeIn">
-
-                    <!--Grid column-->
                     <div class="col-lg-6 col-md-12 px-4">
-
-                        <!--First row-->
                         <div class="row">
                             <div class="col-1 mr-3">
                                 <i class="fa fa-comments-o fa-2x cyan-text"></i>
                             </div>
                             <div class="col-10">
-                                <h5 class="feature-title">Bootstrap 4</h5>
+                                <h5 class="feature-title">Jordan Oldfield - CLO Pubs</h5>
                                 <i class="grey-text">Thanks to MDB you can take advantage of all feature of newest
                                     Bootstrap 4.</i>
                             </div>
                         </div>
-                        <!--/First row-->
-
                         <div style="height:30px"></div>
-
-                        <!--Second row-->
                         <div class="row">
                             <div class="col-1 mr-3">
                                 <i class="fa fa-comments-o fa-2x cyan-text"></i>
                             </div>
                             <div class="col-10">
-                                <h5 class="feature-title">Detailed documentation</h5>
+                                <h5 class="feature-title">Dave Campbell - Blidworth Welfare</h5>
                                 <i class="grey-text">We give you detailed user-friendly documentation at your disposal.
                                     It will help you to implement your ideas
                                     easily.
                                 </i>
                             </div>
                         </div>
-                        <!--/Second row-->
-
                         <div style="height:30px"></div>
-
                     </div>
-                    <!--/Grid column-->
-
-                    <!--Grid column-->
                     <div class="col-lg-6 col-md-12 px-4">
-
-                        <!--First row-->
                         <div class="row">
                             <div class="col-1 mr-3">
                                 <i class="fa fa-comments-o fa-2x cyan-text"></i>
                             </div>
                             <div class="col-10">
-                                <h5 class="feature-title">Bootstrap 4</h5>
+                                <h5 class="feature-title">Alex Metcalfe - Quarrydale School</h5>
                                 <i class="grey-text">Thanks to MDB you can take advantage of all feature of newest
                                     Bootstrap 4.</i>
                             </div>
                         </div>
-                        <!--/First row-->
-
                         <div style="height:30px"></div>
-
-                        <!--Second row-->
                         <div class="row">
                             <div class="col-1 mr-3">
                                 <i class="fa fa-comments-o fa-2x cyan-text"></i>
                             </div>
                             <div class="col-10">
-                                <h5 class="feature-title">Detailed documentation</h5>
+                                <h5 class="feature-title">Ben Meyrick - Benny's Barbers</h5>
                                 <i class="grey-text">We give you detailed user-friendly documentation at your disposal.
                                     It will help you to implement your ideas
                                     easily.
                                 </i>
                             </div>
                         </div>
-                        <!--/Second row-->
-
                         <div style="height:30px"></div>
-
-
                     </div>
-                    <!--/Grid column-->
-
                 </div>
-                <!--/Grid row-->
-
             </section>
-            <!--Section: Main features & Quick Start-->
 
             <hr class="my-5">
         </div>
