--- a/templates/Pages/portfolio.html.twig
+++ b/templates/Pages/portfolio.html.twig
@@ -6,6 +6,7 @@
             <div class="row h-100 align-items-center">
                 <div class="col-12 text-center">
                     <h1 class="font-weight-heavy main-text">My Work.</h1>
+                    <h5 class="main-text">A collection of my projects.</h5>
                 </div>
             </div>
         </div>
@@ -13,10 +14,10 @@
 
     <section class="py-4">
         <div class="container">
-            <div class="col mb-1">
-                <h1 class="font-weight-light pb-1 header-text">Portfolio</h1>
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in</p>
-            </div>
+{#            <div class="col mb-1">#}
+{#                <h1 class="font-weight-light pb-1 header-text">Portfolio</h1>#}
+{#                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in</p>#}
+{#            </div>#}
             <hr class="my-5">
             <div class="row mb-5">
                 <div class="col-xs-12 col-sm-6 col-md-4 mb-3">
@@ -31,7 +32,14 @@
                             <span class="badge language-label mb-4 mr-2">ES6 JS</span>
                             <span class="badge language-label mb-4 mr-2">MySQL</span>
                             <br>
-                            <a href="#" class="btn portfolio_button">Go somewhere</a>
+                            <div class="row">
+                                <div class="col-mb-6 pl-3 pr-4">
+                                <a href="#" class="btn site-button">Live Site</a>
+                                </div>
+                                <div class="col-mb-6">
+                                    <a href="#" class="btn github-button">GitHub</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -45,7 +53,14 @@
                             <span class="badge language-label mb-4 mr-2">MySql</span>
                             <span class="badge language-label mb-4">Javascript</span>
                             <br>
-                            <a href="#" class="btn portfolio_button">Check it out!</a>
+                            <div class="row">
+                                <div class="col-mb-6 pl-3 pr-4">
+                                    <a href="#" class="btn site-button">Live Site</a>
+                                </div>
+                                <div class="col-mb-6">
+                                    <a href="#" class="btn github-button">GitHub</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -59,7 +74,14 @@
                             <span class="badge language-label mb-4 mr-2">TypeScript</span>
                             <span class="badge language-label mb-4">Node JS</span>
                             <br>
-                            <a href="#" class="btn portfolio_button">Go somewhere</a>
+                            <div class="row">
+                                <div class="col-mb-6 pl-3 pr-4">
+                                    <a href="#" class="btn site-button">Live Site</a>
+                                </div>
+                                <div class="col-mb-6">
+                                    <a href="#" class="btn github-button">GitHub</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -74,7 +96,14 @@
                             <span class="badge language-label mb-4 mr-2">React Native</span>
                             <span class="badge language-label mb-4 mr-2">TypeScript</span>
                             <br>
-                            <a href="#" class="btn portfolio_button">Go somewhere</a>
+                            <div class="row">
+                                <div class="col-mb-6 pl-3 pr-4">
+                                    <a href="#" class="btn site-button">Live Site</a>
+                                </div>
+                                <div class="col-mb-6">
+                                    <a href="#" class="btn github-button">GitHub</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -88,7 +117,14 @@
                             <span class="badge language-label mb-4 mr-2">MySql</span>
                             <span class="badge language-label mb-4">Javascript</span>
                             <br>
-                            <a href="#" class="btn portfolio_button">Check it out!</a>
+                            <div class="row">
+                                <div class="col-mb-6 pl-3 pr-4">
+                                    <a href="#" class="btn site-button">Live Site</a>
+                                </div>
+                                <div class="col-mb-6">
+                                    <a href="#" class="btn github-button">GitHub</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -102,7 +138,14 @@
                             <span class="badge language-label mb-4 mr-2">MySql</span>
                             <span class="badge language-label mb-4">Javascript</span>
                             <br>
-                            <a href="#" class="btn portfolio_button">Go somewhere</a>
+                            <div class="row">
+                                <div class="col-mb-6 pl-3 pr-4">
+                                    <a href="#" class="btn site-button">Live Site</a>
+                                </div>
+                                <div class="col-mb-6">
+                                    <a href="#" class="btn github-button">GitHub</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
