--- a/templates/navigation.html.twig
+++ b/templates/navigation.html.twig
@@ -2,7 +2,7 @@
 
 <nav class="navbar navbar-expand-lg fixed-top nav-bar">
     <div class="container">
-{#        <a class="navbar-brand" href="#">Start Bootstrap</a>#}
+        <h5 class="main-text pt-2 font-weight-bold">Brad Waterhouse.</h5>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
