--- a/templates/Pages/blog.html.twig
+++ b/templates/Pages/blog.html.twig
@@ -14,6 +14,11 @@
 
     <section class="py-5">
         <div class="container">
+            <div class="top-text pb-3">
+                <h2 class="blog-title">Welcome to my blog.</h2>
+                <p>'You ought to be ashamed of yourself for asking such a simple question,' added the Gryphon; and then they both sat silent and looked at poor Alice, who felt ready to sink into the earth. At last the Gryphon said to the Mock Turtle, 'Drive o
+                    'You did,' said the Mock Turtle</p>
+            </div>
             <hr class="my-5">
                     <div class="dropdown show mb-2 text-right">
                         <a class="btn btn portfolio_button dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -25,6 +30,7 @@
                             <a class="dropdown-item" href="#">Price (DESC)</a>
                         </div>
                     </div>
+
 
 
             <div class="col-md-12">
@@ -67,7 +73,6 @@
                     </div>
                 </div>
                 <hr>
-                <hr>
                 <h2 class="blog-title">Today I Learned...</h2>
                 <p>'I am bound to Tahiti for more men.'
                     'Very good. Let me board you a moment—I come in peace.' With that he leaped from the canoe, swam to the boat; and climbing the gunwale, stood face to face with the captain.
@@ -87,7 +92,6 @@
                         </span>
                     </div>
                 </div>
-                <hr>
                 <hr>
                 <h2 class="blog-title">Revolution has begun!</h2>
                 <p>'I am bound to Tahiti for more men.'
