--- a/templates/Pages/blog_post.html.twig
+++ b/templates/Pages/blog_post.html.twig
@@ -5,8 +5,8 @@
         <div class="container h-100">
             <div class="row h-100 align-items-center">
                 <div class="col-12 text-center">
-                    <h1 class="font-weight-heavy main-text">Today I learned.</h1>
-                    <h4 class="main-text pb-4">some interesting hook line.</h4>
+{#                    <h1 class="font-weight-heavy main-text">Today I learned.</h1>#}
+                    <h2 class="main-text pb-3 pt-3">Today I learned.</h2>
                     <h6 class="main-text"><b>Brad Waterhouse</b> | PHP | Jan 2021</h6>
                 </div>
             </div>
