--- a/templates/Pages/contact.html.twig
+++ b/templates/Pages/contact.html.twig
@@ -12,8 +12,13 @@
         </div>
     </header>
 
-    <section class="mt-4">
+    <section class="py-5">
         <div class="container mb-5" id="container">
+            <div class="top-text">
+                <h2 class="blog-title">Get in contact.</h2>
+                <p>'You ought to be ashamed of yourself for asking such a simple question,' added the Gryphon; and then they both sat silent and looked at poor Alice, who felt ready to sink into the earth. At last the Gryphon said to the Mock Turtle, 'Drive o
+                    'You did,' said the Mock Turtle</p>
+            </div>
             <hr class="my-5">
             <form>
                 <div class="row">
