--- a/templates/Pages/home.html.twig
+++ b/templates/Pages/home.html.twig
@@ -169,8 +169,8 @@
                             </div>
                             <div class="col-10">
                                 <h5 class="feature-title">Jordan Oldfield - CLO Pubs</h5>
-                                <i class="grey-text">Thanks to MDB you can take advantage of all feature of newest
-                                    Bootstrap 4.</i>
+                                <i class="grey-text">"Thanks to MDB you can take advantage of all feature of newest
+                                    Bootstrap 4."</i>
                             </div>
                         </div>
                         <div style="height:30px"></div>
@@ -180,9 +180,9 @@
                             </div>
                             <div class="col-10">
                                 <h5 class="feature-title">Dave Campbell - Blidworth Welfare</h5>
-                                <i class="grey-text">We give you detailed user-friendly documentation at your disposal.
+                                <i class="grey-text">"We give you detailed user-friendly documentation at your disposal.
                                     It will help you to implement your ideas
-                                    easily.
+                                    easily."
                                 </i>
                             </div>
                         </div>
@@ -195,8 +195,8 @@
                             </div>
                             <div class="col-10">
                                 <h5 class="feature-title">Alex Metcalfe - Quarrydale School</h5>
-                                <i class="grey-text">Thanks to MDB you can take advantage of all feature of newest
-                                    Bootstrap 4.</i>
+                                <i class="grey-text">"Thanks to MDB you can take advantage of all feature of newest
+                                    Bootstrap 4."</i>
                             </div>
                         </div>
                         <div style="height:30px"></div>
@@ -206,9 +206,9 @@
                             </div>
                             <div class="col-10">
                                 <h5 class="feature-title">Ben Meyrick - Benny's Barbers</h5>
-                                <i class="grey-text">We give you detailed user-friendly documentation at your disposal.
+                                <i class="grey-text">"We give you detailed user-friendly documentation at your disposal.
                                     It will help you to implement your ideas
-                                    easily.
+                                    easily."
                                 </i>
                             </div>
                         </div>
