--- a/templates/Pages/portfolio.html.twig
+++ b/templates/Pages/portfolio.html.twig
@@ -12,17 +12,18 @@
         </div>
     </header>
 
-    <section class="py-4">
+    <section class="py-5">
         <div class="container">
-{#            <div class="col mb-1">#}
-{#                <h1 class="font-weight-light pb-1 header-text">Portfolio</h1>#}
-{#                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in</p>#}
-{#            </div>#}
+            <div class="top-text">
+                <h2 class="blog-title">My recent projects.</h2>
+                <p>'You ought to be ashamed of yourself for asking such a simple question,' added the Gryphon; and then they both sat silent and looked at poor Alice, who felt ready to sink into the earth. At last the Gryphon said to the Mock Turtle, 'Drive o
+                    'You did,' said the Mock Turtle</p>
+            </div>
             <hr class="my-5">
             <div class="row mb-5">
                 <div class="col-xs-12 col-sm-6 col-md-4 mb-3">
                     <div class="card rounded-corners-bottom rounded-corners-top">
-                        <img class="card-img-top rounded-corners-top" src="https://thumbs.dreamstime.com/b/professional-development-programmer-working-programming-website-software-coding-technology-writing-codes-data-code-132331729.jpg" alt="Card image cap">
+                        <img class="card-img-top rounded-corners-top" src="https://i.imgur.com/HQqHUwr.png" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title blog-title">CLO Pubs</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -45,7 +46,7 @@
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-4 mb-3">
                     <div class="card rounded-corners-bottom rounded-corners-top">
-                        <img class="card-img-top rounded-corners-top" src="https://thumbs.dreamstime.com/b/professional-development-programmer-working-programming-website-software-coding-technology-writing-codes-data-code-132331729.jpg" alt="Card image cap">
+                        <img class="card-img-top rounded-corners-top" src="https://i.imgur.com/vf4EZMG.png" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title blog-title">Track & Trace</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -66,7 +67,7 @@
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-4 mb-3">
                     <div class="card rounded-corners-bottom rounded-corners-top">
-                        <img class="card-img-top rounded-corners-top" src="https://thumbs.dreamstime.com/b/professional-development-programmer-working-programming-website-software-coding-technology-writing-codes-data-code-132331729.jpg" alt="Card image cap">
+                        <img class="card-img-top rounded-corners-top" src="https://i.imgur.com/RTVBBP2.png" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title blog-title">Seating Planner</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -89,7 +90,7 @@
             <div class="row">
                 <div class="col-xs-12 col-sm-6 col-md-4 mb-3">
                     <div class="card rounded-corners-bottom rounded-corners-top">
-                        <img class="card-img-top rounded-corners-top" src="https://thumbs.dreamstime.com/b/professional-development-programmer-working-programming-website-software-coding-technology-writing-codes-data-code-132331729.jpg" alt="Card image cap">
+                        <img class="card-img-top rounded-corners-top" src="https://i.imgur.com/vf4EZMG.png" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title blog-title">Pool Application</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -109,7 +110,7 @@
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-4 mb-3">
                     <div class="card rounded-corners-bottom rounded-corners-top">
-                        <img class="card-img-top rounded-corners-top" src="https://thumbs.dreamstime.com/b/professional-development-programmer-working-programming-website-software-coding-technology-writing-codes-data-code-132331729.jpg" alt="Card image cap">
+                        <img class="card-img-top rounded-corners-top" src="https://i.imgur.com/Gozo4ny.png" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title blog-title">Personal Website</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -130,7 +131,7 @@
                 </div>
                 <div class="col-xs-12 col-sm-6 col-md-4 mb-3">
                     <div class="card rounded-corners-bottom rounded-corners-top">
-                        <img class="card-img-top rounded-corners-top" src="https://thumbs.dreamstime.com/b/professional-development-programmer-working-programming-website-software-coding-technology-writing-codes-data-code-132331729.jpg" alt="Card image cap">
+                        <img class="card-img-top rounded-corners-top" src="https://i.imgur.com/yslm39F.png" alt="Card image cap">
                         <div class="card-body">
                             <h5 class="card-title blog-title">Bunches</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
